Refactor dbt project structure: remove example models, add staging models and sources

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "3b3f75cd",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
     "   csv_url = f\"https://raw.githubusercontent.com/dsteddy/jaffle_shop_data/main/raw_{table}.csv\"\n",
     "   df = pd.read_csv(csv_url)\n",
     "   # On ajoute les informations de de dataframe à la table dans MySQL.\n",
-    "   df.to_sql(f\"raw_{table}\", engine, if_exists=\"replace\", index=False)\n"
+    "   df.to_sql(f\"raw_{table}\", engine, if_exists=\"replace\", index=False)"
    ]
   }
  ],
